--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,7 @@
 rootProject.name = 'eatgo'
 
-include('eatgo-api')
-/*include 'eatgo-api'*/
+/*프로젝트 포함하기*/
+include 'eatgo-common'
+include 'eatgo-admin-api'
+include 'eatgo-customer-api'
+
