--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ rootProject.name = 'eatgo'
 include 'eatgo-common'
 include 'eatgo-admin-api'
 include 'eatgo-customer-api'
+include 'eatgo-login-api'
 
